deploy: b75cf4d2f6a8041e68fa3e62b377cdc880c21aca

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <p>Note that while Frameless is still getting off the ground, it is very possible that breaking changes will be
         made for at least the next few versions.</p>
         <p>The Frameless project and contributors support the
-        <a href="http://typelevel.org/">Typelevel</a> <a href="http://typelevel.org/conduct.html">Code of Conduct</a> and want all its
+        <a href="http://typelevel.org/">Typelevel</a> <a href="http://typelevel.org/code-of-conduct.html">Code of Conduct</a> and want all its
         associated channels (e.g. GitHub, Discord) to be a safe and friendly environment for contributing and learning.</p>
         
         <h2 id="versions-and-dependencies" class="section">Versions and dependencies<a class="anchor-link right" href="#versions-and-dependencies"><i class="icofont-laika">&#xef71;</i></a></h2>
