--- a/WorkingWithCsvParquetJson.html
+++ b/WorkingWithCsvParquetJson.html
@@ -172,11 +172,11 @@
 </span><span class="keyword">val</span><span> </span><span class="identifier">data</span><span>: </span><span class="type-name">TypedDataset</span><span>[</span><span class="type-name">Iris</span><span>] = </span><span class="type-name">TypedDataset</span><span>.</span><span class="identifier">createUnsafe</span><span>[</span><span class="type-name">Iris</span><span>](</span><span class="identifier">testDataNoSchema</span><span>)
 </span><span class="comment">// data: TypedDataset[Iris] = [sLength: string, sWidth: string ... 3 more fields]</span></code></pre>
         <pre><code class="nohighlight"><span class="identifier">data</span><span>.</span><span class="identifier">collect</span><span>().</span><span class="identifier">run</span><span>()
-</span><span class="comment">// java.lang.RuntimeException: Error while decoding: scala.ScalaReflectionException: &lt;none&gt; is not a term
-// newInstance(class repl.MdocSession$App0$Iris)
-// 	at org.apache.spark.sql.errors.QueryExecutionErrors$.expressionDecodingError(QueryExecutionErrors.scala:1232)
-// 	at org.apache.spark.sql.catalyst.encoders.ExpressionEncoder$Deserializer.apply(ExpressionEncoder.scala:184)
-// 	at org.apache.spark.sql.catalyst.encoders.ExpressionEncoder$Deserializer.apply(ExpressionEncoder.scala:172)
+</span><span class="comment">// org.apache.spark.SparkRuntimeException: Error while decoding: scala.ScalaReflectionException: &lt;none&gt; is not a term
+// newInstance(class repl.MdocSession$App0$Iris).
+// 	at org.apache.spark.sql.errors.QueryExecutionErrors$.expressionDecodingError(QueryExecutionErrors.scala:1543)
+// 	at org.apache.spark.sql.catalyst.encoders.ExpressionEncoder$Deserializer.apply(ExpressionEncoder.scala:171)
+// 	at org.apache.spark.sql.catalyst.encoders.ExpressionEncoder$Deserializer.apply(ExpressionEncoder.scala:159)
 // 	at scala.collection.TraversableLike.$anonfun$map$1(TraversableLike.scala:286)
 // 	at scala.collection.IndexedSeqOptimized.foreach(IndexedSeqOptimized.scala:36)
 // 	at scala.collection.IndexedSeqOptimized.foreach$(IndexedSeqOptimized.scala:33)
@@ -184,18 +184,18 @@
 // 	at scala.collection.TraversableLike.map(TraversableLike.scala:286)
 // 	at scala.collection.TraversableLike.map$(TraversableLike.scala:279)
 // 	at scala.collection.mutable.ArrayOps$ofRef.map(ArrayOps.scala:198)
-// 	at org.apache.spark.sql.Dataset.collectFromPlan(Dataset.scala:3868)
-// 	at org.apache.spark.sql.Dataset.$anonfun$collect$1(Dataset.scala:3120)
-// 	at org.apache.spark.sql.Dataset.$anonfun$withAction$2(Dataset.scala:3858)
-// 	at org.apache.spark.sql.execution.QueryExecution$.withInternalError(QueryExecution.scala:510)
-// 	at org.apache.spark.sql.Dataset.$anonfun$withAction$1(Dataset.scala:3856)
-// 	at org.apache.spark.sql.execution.SQLExecution$.$anonfun$withNewExecutionId$6(SQLExecution.scala:109)
-// 	at org.apache.spark.sql.execution.SQLExecution$.withSQLConfPropagated(SQLExecution.scala:169)
-// 	at org.apache.spark.sql.execution.SQLExecution$.$anonfun$withNewExecutionId$1(SQLExecution.scala:95)
-// 	at org.apache.spark.sql.SparkSession.withActive(SparkSession.scala:779)
-// 	at org.apache.spark.sql.execution.SQLExecution$.withNewExecutionId(SQLExecution.scala:64)
-// 	at org.apache.spark.sql.Dataset.withAction(Dataset.scala:3856)
-// 	at org.apache.spark.sql.Dataset.collect(Dataset.scala:3120)
+// 	at org.apache.spark.sql.Dataset.collectFromPlan(Dataset.scala:4177)
+// 	at org.apache.spark.sql.Dataset.$anonfun$collect$1(Dataset.scala:3418)
+// 	at org.apache.spark.sql.Dataset.$anonfun$withAction$2(Dataset.scala:4167)
+// 	at org.apache.spark.sql.execution.QueryExecution$.withInternalError(QueryExecution.scala:526)
+// 	at org.apache.spark.sql.Dataset.$anonfun$withAction$1(Dataset.scala:4165)
+// 	at org.apache.spark.sql.execution.SQLExecution$.$anonfun$withNewExecutionId$6(SQLExecution.scala:118)
+// 	at org.apache.spark.sql.execution.SQLExecution$.withSQLConfPropagated(SQLExecution.scala:195)
+// 	at org.apache.spark.sql.execution.SQLExecution$.$anonfun$withNewExecutionId$1(SQLExecution.scala:103)
+// 	at org.apache.spark.sql.SparkSession.withActive(SparkSession.scala:827)
+// 	at org.apache.spark.sql.execution.SQLExecution$.withNewExecutionId(SQLExecution.scala:65)
+// 	at org.apache.spark.sql.Dataset.withAction(Dataset.scala:4165)
+// 	at org.apache.spark.sql.Dataset.collect(Dataset.scala:3418)
 // 	at frameless.TypedDataset.$anonfun$collect$1(TypedDataset.scala:333)
 // 	at frameless.Job$$anon$4.run(Job.scala:38)
 // 	at repl.MdocSession$App0$$anonfun$25.apply(WorkingWithCsvParquetJson.md:85)
@@ -204,16 +204,16 @@
 // 	at scala.reflect.api.Symbols$SymbolApi.asTerm(Symbols.scala:211)
 // 	at scala.reflect.api.Symbols$SymbolApi.asTerm$(Symbols.scala:211)
 // 	at scala.reflect.internal.Symbols$SymbolContextApiImpl.asTerm(Symbols.scala:100)
-// 	at org.apache.spark.sql.catalyst.ScalaReflection$.findConstructor(ScalaReflection.scala:819)
-// 	at org.apache.spark.sql.catalyst.expressions.objects.NewInstance.$anonfun$constructor$1(objects.scala:548)
-// 	at org.apache.spark.sql.catalyst.expressions.objects.NewInstance.$anonfun$constructor$5(objects.scala:559)
+// 	at org.apache.spark.sql.catalyst.ScalaReflection$.findConstructor(ScalaReflection.scala:689)
+// 	at org.apache.spark.sql.catalyst.expressions.objects.NewInstance.$anonfun$constructor$1(objects.scala:551)
+// 	at org.apache.spark.sql.catalyst.expressions.objects.NewInstance.$anonfun$constructor$5(objects.scala:562)
 // 	at scala.Option.getOrElse(Option.scala:189)
-// 	at org.apache.spark.sql.catalyst.expressions.objects.NewInstance.constructor$lzycompute(objects.scala:558)
-// 	at org.apache.spark.sql.catalyst.expressions.objects.NewInstance.constructor(objects.scala:545)
-// 	at org.apache.spark.sql.catalyst.expressions.objects.NewInstance.eval(objects.scala:568)
-// 	at org.apache.spark.sql.catalyst.expressions.InterpretedSafeProjection.apply(InterpretedSafeProjection.scala:117)
+// 	at org.apache.spark.sql.catalyst.expressions.objects.NewInstance.constructor$lzycompute(objects.scala:561)
+// 	at org.apache.spark.sql.catalyst.expressions.objects.NewInstance.constructor(objects.scala:548)
+// 	at org.apache.spark.sql.catalyst.expressions.objects.NewInstance.eval(objects.scala:584)
+// 	at org.apache.spark.sql.catalyst.expressions.InterpretedSafeProjection.apply(InterpretedSafeProjection.scala:115)
 // 	at org.apache.spark.sql.catalyst.expressions.InterpretedSafeProjection.apply(InterpretedSafeProjection.scala:32)
-// 	at org.apache.spark.sql.catalyst.encoders.ExpressionEncoder$Deserializer.apply(ExpressionEncoder.scala:181)
+// 	at org.apache.spark.sql.catalyst.encoders.ExpressionEncoder$Deserializer.apply(ExpressionEncoder.scala:168)
 // 	... 24 more</span></code></pre>
         
         <h3 id="dealing-with-csv-files-with-multiple-columns" class="section">Dealing with CSV files with multiple columns<a class="anchor-link right" href="#dealing-with-csv-files-with-multiple-columns"><i class="icofont-laika">&#xef71;</i></a></h3>
